--- a/web/src/components/Navbar/Navbar.css
+++ b/web/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333; /* Change to your desired background color */
+  background-color: #4B56E3; /* Change to your desired background color */
   padding: 10px 20px;
 }
 
